main: fix (discography) - Adjusted max-width of grid layout for better alignment

--- a/atarashii-gakko/src/styles/components/_discography.scss
+++ b/atarashii-gakko/src/styles/components/_discography.scss
@@ -64,7 +64,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2.5rem;
   margin-top: 3rem;
-  max-width: 1150px;
+  max-width: 1110px;
   margin-left: auto;
   margin-right: auto;
 
